deploy: dfbf4fbee08e9e384fd4d4b1a2898614d6d61338

--- a/admins/block-instances-or-actors.html
+++ b/admins/block-instances-or-actors.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Compatibility Chart - Hatsu Documentation</title>
+        <title>Block Instances or Actors - Hatsu Documentation</title>
 
 
         <!-- Custom HTML head -->
@@ -92,7 +92,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="../users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="../users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="../users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-aoba.html"><strong aria-hidden="true">4.4.</strong> with Aoba (Lume & Hono)</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-fep-612d.html"><strong aria-hidden="true">4.5.</strong> with FEP-612d</a></li></ol></li><li class="chapter-item expanded "><a href="../users/backfeed.html"><strong aria-hidden="true">5.</strong> Backfeed</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/backfeed-based-on-kkna.html"><strong aria-hidden="true">5.1.</strong> based on KKna</a></li><li class="chapter-item expanded "><a href="../users/backfeed-based-on-mastodon-comments.html"><strong aria-hidden="true">5.2.</strong> based on Mastodon Comments</a></li><li class="chapter-item expanded "><a href="../users/backfeed-based-on-webmention.html"><strong aria-hidden="true">5.3.</strong> based on Webmention (TODO)</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="../admins/install.html"><strong aria-hidden="true">6.</strong> Install</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../admins/install-docker.html"><strong aria-hidden="true">6.1.</strong> Docker Installation</a></li><li class="chapter-item expanded "><a href="../admins/install-binary.html"><strong aria-hidden="true">6.2.</strong> Binary Installation</a></li><li class="chapter-item expanded "><a href="../admins/install-nix.html"><strong aria-hidden="true">6.3.</strong> Nix/NixOS Installation</a></li></ol></li><li class="chapter-item expanded "><a href="../admins/environments.html"><strong aria-hidden="true">7.</strong> Environments</a></li><li class="chapter-item expanded "><a href="../admins/create-account.html"><strong aria-hidden="true">8.</strong> Create Account</a></li><li class="chapter-item expanded "><a href="../admins/block-instances-or-actors.html"><strong aria-hidden="true">9.</strong> Block Instances or Actors</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/prepare.html"><strong aria-hidden="true">10.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/development-local.html"><strong aria-hidden="true">11.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/development-docker.html"><strong aria-hidden="true">12.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html" class="active"><strong aria-hidden="true">13.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/federation.html"><strong aria-hidden="true">14.</strong> Federation</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">15.</strong> JSON Feed Extension</a></li><li class="chapter-item expanded "><a href="../others/packaging-status.html"><strong aria-hidden="true">16.</strong> Packaging Status</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="../users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="../users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="../users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-aoba.html"><strong aria-hidden="true">4.4.</strong> with Aoba (Lume & Hono)</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-fep-612d.html"><strong aria-hidden="true">4.5.</strong> with FEP-612d</a></li></ol></li><li class="chapter-item expanded "><a href="../users/backfeed.html"><strong aria-hidden="true">5.</strong> Backfeed</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/backfeed-based-on-kkna.html"><strong aria-hidden="true">5.1.</strong> based on KKna</a></li><li class="chapter-item expanded "><a href="../users/backfeed-based-on-mastodon-comments.html"><strong aria-hidden="true">5.2.</strong> based on Mastodon Comments</a></li><li class="chapter-item expanded "><a href="../users/backfeed-based-on-webmention.html"><strong aria-hidden="true">5.3.</strong> based on Webmention (TODO)</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="../admins/install.html"><strong aria-hidden="true">6.</strong> Install</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../admins/install-docker.html"><strong aria-hidden="true">6.1.</strong> Docker Installation</a></li><li class="chapter-item expanded "><a href="../admins/install-binary.html"><strong aria-hidden="true">6.2.</strong> Binary Installation</a></li><li class="chapter-item expanded "><a href="../admins/install-nix.html"><strong aria-hidden="true">6.3.</strong> Nix/NixOS Installation</a></li></ol></li><li class="chapter-item expanded "><a href="../admins/environments.html"><strong aria-hidden="true">7.</strong> Environments</a></li><li class="chapter-item expanded "><a href="../admins/create-account.html"><strong aria-hidden="true">8.</strong> Create Account</a></li><li class="chapter-item expanded "><a href="../admins/block-instances-or-actors.html" class="active"><strong aria-hidden="true">9.</strong> Block Instances or Actors</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/prepare.html"><strong aria-hidden="true">10.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/development-local.html"><strong aria-hidden="true">11.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/development-docker.html"><strong aria-hidden="true">12.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">13.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/federation.html"><strong aria-hidden="true">14.</strong> Federation</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">15.</strong> JSON Feed Extension</a></li><li class="chapter-item expanded "><a href="../others/packaging-status.html"><strong aria-hidden="true">16.</strong> Packaging Status</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -151,7 +151,7 @@
                         <a href="https://github.com/importantimport/hatsu" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/others/compatibility-chart.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/admins/block-instances-or-actors.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -180,36 +180,48 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="compatibility-chart"><a class="header" href="#compatibility-chart">Compatibility Chart</a></h1>
-<p>Hatsu is primarily geared towards the micro-blogging platform in the Fediverse.</p>
-<p>Currently I've created a chart for all the platforms I expect to be compatible with, and hopefully it will be filled in later:</p>
-<h2 id="send"><a class="header" href="#send">Send</a></h2>
-<div class="table-wrapper"><table><thead><tr><th></th><th><a href="https://www.w3.org/ns/activitystreams#Note">Create</a> (Note)</th><th><a href="https://www.w3.org/ns/activitystreams#Accept">Accept</a> (Follow)</th></tr></thead><tbody>
-<tr><td><a href="https://github.com/mastodon/mastodon">Mastodon</a></td><td>✅</td><td>✅</td></tr>
-<tr><td><a href="https://github.com/superseriousbusiness/gotosocial">GoToSocial</a></td><td></td><td></td></tr>
-<tr><td><a href="https://github.com/misskey-dev/misskey">Misskey</a></td><td></td><td></td></tr>
-<tr><td><a href="https://git.pleroma.social/pleroma/pleroma/">Pleroma</a></td><td>✅</td><td></td></tr>
-</tbody></table>
-</div>
-<h2 id="receive"><a class="header" href="#receive">Receive</a></h2>
-<div class="table-wrapper"><table><thead><tr><th></th><th><a href="https://www.w3.org/ns/activitystreams#Follow">Follow</a></th><th></th></tr></thead><tbody>
-<tr><td><a href="https://github.com/mastodon/mastodon">Mastodon</a></td><td>✅</td><td></td></tr>
-<tr><td><a href="https://github.com/superseriousbusiness/gotosocial">GoToSocial</a></td><td></td><td></td></tr>
-<tr><td><a href="https://github.com/misskey-dev/misskey">Misskey</a></td><td></td><td></td></tr>
-<tr><td><a href="https://git.pleroma.social/pleroma/pleroma/">Pleroma</a></td><td></td><td></td></tr>
-</tbody></table>
-</div>
-<p><a href="https://akkoma.dev/AkkomaGang/akkoma/">Akkoma</a>, <a href="https://activitypub.software/TransFem-org/Sharkey">Sharkey</a>, etc. forks should be compatible with upstream, so they are not listed separately.</p>
+                        <h1 id="block-instances-or-actors"><a class="header" href="#block-instances-or-actors">Block Instances or Actors</a></h1>
+<blockquote>
+<p>Ensure you set <code>HATSU_ACCESS_TOKEN</code> correctly in the <a href="./environments.html#hatsu_access_token-optional">previous section</a> first, otherwise you will not be able to use the Hatsu Admin API.</p>
+</blockquote>
+<h2 id="block-url"><a class="header" href="#block-url">Block URL</a></h2>
+<p>Block URL. if path is <code>/</code>, it is recognized as an instance.</p>
+<p>Each time an activity is received an origin match is performed on blocked instances and an exact match is performed on blocked actors.</p>
+<pre><code class="language-bash">BLOCK_URL="https://example.com" curl -X POST "http://localhost:$(echo $HATSU_LISTEN_PORT)/api/v0/admin/block-url?url=$(echo $BLOCK_URL)&amp;token=$(echo $HATSU_ACCESS_TOKEN)"
+</code></pre>
+<h3 id="get-the-actors-url-for-a-fediverse-user"><a class="header" href="#get-the-actors-url-for-a-fediverse-user">Get the Actors URL for a Fediverse user</a></h3>
+<p>In Fediverse, we see user IDs typically as <code>@foo@example.com</code>. so how do we get the corresponding URL? it's simple. here's an example of a JavaScript environment where you can run it in your browser:</p>
+<pre><code class="language-js">const id = '@Gargron@mastodon.social'
+
+// split id by @ symbol
+// ['', 'Gargron', 'mastodon.social']
+const [_, user, instance] = id.split('@')
+
+// get webfinger json
+const webfinger = await fetch(
+  `https://${instance}/.well-known/webfinger?resource=acct:${user}@${instance}`,
+  { headers: { accept: 'application/jrd+json' }}
+).then(res =&gt; res.json())
+
+// find rel=self
+const url = webfinger.links.find(({ rel }) =&gt; rel === 'self').href
+
+// https://mastodon.social/users/Gargron
+console.log(url)
+</code></pre>
+<p>That's it! you may also need to open the console on the web page of the instance the account belongs to, given cross-origin issues and such.</p>
+<h2 id="unblock-url"><a class="header" href="#unblock-url">Unblock URL</a></h2>
+<p>The unblocked version of the above API, simply replaces the path <code>/api/v0/admin/block-url</code> with <code>/api/v0/admin/unblock-url</code>.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../developers/development-docker.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../admins/create-account.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../others/federation.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../developers/prepare.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -219,11 +231,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../developers/development-docker.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../admins/create-account.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../others/federation.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../developers/prepare.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
