--- a/print.html
+++ b/print.html
@@ -754,9 +754,7 @@ const url = new URL(`/api/v1/statuses/${id}/context`, origin)
 </code></pre>
 <h2 id="curl"><a class="header" href="#curl">curl</a></h2>
 <p>You can also access the API via curl, as <code>Justfile</code> does.</p>
-<pre><code class="language-bash">curl -X POST "http://localhost:$(echo $HATSU_LISTEN_PORT)/api/v0/admin/create-account?token=$(echo $HATSU_ACCESS_TOKEN)" \
-  -H "Content-Type: application/json" \
-  -d "{\"name\": \"example.com\"}"
+<pre><code class="language-bash">NAME="example.com" curl -X POST "http://localhost:$(echo $HATSU_LISTEN_PORT)/api/v0/admin/create-account?name=$(echo $NAME)&amp;token=$(echo $HATSU_ACCESS_TOKEN)"
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="block-instances-or-actors"><a class="header" href="#block-instances-or-actors">Block Instances or Actors</a></h1>
 <blockquote>
